--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "engines": { "node": "0.4.x || 0.5.x" },
     
     "dependencies": {
+        "commander": "0.1.x",
         "jade": "0.15.x"
     },
     
