--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     },
     
     "devDependencies": {
-        "vows": "0.5.x"
+        "vows": "0.5.x",
+        "interleave": "0.0.x"
     },
     
     "repository": {
