Fixed .npmignore excluding build.js in the actions path

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "deckem",
-    "description": "Jade + deck.js awesomeness, wrapped in a Steelmesh app",
+    "description": "Build deck.js presentations using Jade templating",
     "tags": ["presentations", "deck.js", "couchdb", "steelmesh"],
     "author": "Damon Oehlman <damon.oehlman@sidelab.com>",
     "version": "0.0.3",
