--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "Build deck.js presentations using Jade templating",
     "tags": ["presentations", "deck.js", "couchdb", "steelmesh"],
     "author": "Damon Oehlman <damon.oehlman@sidelab.com>",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "main": "index",
     "bin": { "deckem": "./bin/deckem" },
     
@@ -11,11 +11,9 @@
     
     "dependencies": {
         "async": "0.1.x",
-        "commander": "0.1.x",
         "jade": "0.15.x",
-        "out": "0.x.x",
-        "ncp": "0.1.x",
-        "underscore": "1.x.x"
+        "underscore": "1.x.x",
+        "scaffolder": "0.0.x"
     },
     
     "devDependencies": {
